add passport to user cart methods
