# src/swagger.json
@@ -536,7 +536,7 @@
         }
       }
     },
-    "/users/cart/{id}": {
+    "/users/cart/": {
       "post": {
         "tags": [
           "Users"
@@ -551,13 +551,6 @@
           "application/json"
         ],
         "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "x-oad-type": "parameter"
-          },
           {
             "in": "body",
             "name": "Product info",
@@ -639,113 +632,6 @@
           }
         }
       },
-      "delete": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Deletes product from cart",
-        "description": "Deletes a product from cart by given query from request body",
-        "operationId": "deleteProducts",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "x-oad-type": "parameter"
-          },
-          {
-            "in": "body",
-            "name": "Product info",
-            "required": false,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "productId": {
-                  "type": "string"
-                },
-                "sizeId": {
-                  "type": "string"
-                },
-                "quantity": {
-                  "type": "number"
-                },
-                "_id": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Product deleted from cart",
-            "schema": {
-              "type": "boolean"
-            },
-            "examples": true
-          },
-          "400": {
-            "description": "Request body cannot be empty, because it deletes all products in cart",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "statusCode": {
-                  "type": "integer"
-                },
-                "error": {
-                  "type": "string"
-                },
-                "message": {
-                  "type": "string"
-                }
-              }
-            },
-            "examples": {
-              "application/json": {
-                "statusCode": 400,
-                "error": "Bad Request",
-                "message": "Request body cannot be empty"
-              }
-            }
-          },
-          "404": {
-            "description": "Not found.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "statusCode": {
-                  "type": "integer"
-                },
-                "error": {
-                  "type": "string"
-                },
-                "message": {
-                  "type": "string"
-                }
-              }
-            },
-            "examples": {
-              "application/json": {
-                "statusCode": 404,
-                "error": "Not Found",
-                "message": "User not found"
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/cart/": {
       "get": {
         "tags": [
           "Users"
@@ -760,14 +646,6 @@
           "application/json"
         ],
         "parameters": [
-          {
-            "name": "userId",
-            "required": true,
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "productId",
             "in": "query",
@@ -847,6 +725,106 @@
                 "statusCode": 404,
                 "error": "Not Found",
                 "message": "No card items found"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/cart/{id}": {
+      "delete": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Deletes product from cart",
+        "description": "Deletes a product from cart by given query from request body",
+        "operationId": "deleteProducts",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Product info",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "productId": {
+                  "type": "string"
+                },
+                "sizeId": {
+                  "type": "string"
+                },
+                "quantity": {
+                  "type": "number"
+                },
+                "_id": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Product deleted from cart",
+            "schema": {
+              "type": "boolean"
+            },
+            "examples": true
+          },
+          "400": {
+            "description": "Request body cannot be empty, because it deletes all products in cart",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "statusCode": {
+                  "type": "integer"
+                },
+                "error": {
+                  "type": "string"
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
+            },
+            "examples": {
+              "application/json": {
+                "statusCode": 400,
+                "error": "Bad Request",
+                "message": "Request body cannot be empty"
+              }
+            }
+          },
+          "404": {
+            "description": "Not found.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "statusCode": {
+                  "type": "integer"
+                },
+                "error": {
+                  "type": "string"
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
+            },
+            "examples": {
+              "application/json": {
+                "statusCode": 404,
+                "error": "Not Found",
+                "message": "User not found"
               }
             }
           },
